--- a/app/views/manage/questionnaire/v13/constraints/green-belt.html
+++ b/app/views/manage/questionnaire/v13/constraints/green-belt.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Is the appeal site in a green belt?' %}
+{% set title = 'Is the site in a green belt?' %}
 
 {% block questions %}
 
