--- a/app/views/manage/questionnaire/v13/constraints/tree-order-upload.html
+++ b/app/views/manage/questionnaire/v13/constraints/tree-order-upload.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Upload a plan showing the extent of the Order' %}
+{% set title = 'Upload a plan showing the extent of the order' %}
 
 {% block questions %}
 
@@ -18,7 +18,7 @@
       name: 'tree-order-upload',
       classes: 'moj-multi-file-upload__input',
       label: {
-        text: 'Upload a file',
+        text: 'Upload files',
         classes: 'govuk-label--m'
       },
       hint: {
@@ -27,7 +27,7 @@
     }) }}
 
     {{govukButton({
-      text: 'Upload file',
+      text: 'Upload files',
       classes: 'govuk-button--secondary moj-multi-file-upload__button'
     })}}
   {% endset %}
