--- a/app/views/manage/questionnaire/v13/env-impact/negative-screening-upload.html
+++ b/app/views/manage/questionnaire/v13/env-impact/negative-screening-upload.html
@@ -18,7 +18,7 @@
       name: 'env-statement-upload',
       classes: 'moj-multi-file-upload__input',
       label: {
-        text: 'Upload file',
+        text: 'Upload files',
         classes: 'govuk-label--m'
       },
       hint: {
@@ -27,7 +27,7 @@
     }) }}
 
     {{govukButton({
-      text: 'Upload file',
+      text: 'Upload files',
       classes: 'govuk-button--secondary moj-multi-file-upload__button'
     })}}
   {% endset %}
