--- a/app/views/manage/questionnaire/v13/appeal-process/extra-conditions.html
+++ b/app/views/manage/questionnaire/v13/appeal-process/extra-conditions.html
@@ -1,21 +1,19 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Extra conditions' %}
+{% set title = 'Add new planning conditions to this appeal' %}
 
 {% block questions %}
 
   <span class="govuk-caption-l">
     Appeal process
   </span>
-
   <h1 class="govuk-heading-l">
     {{ title }}
   </h1>
-  <p class="govuk-body">You need to tell us about any extra conditions you want the inspector to apply if they allow the appeal.</p>
 
-  <p class="govuk-body">If you choose to not tell us about them now, you must email <a href=:mailto:caseofficers@planninginspectorate.gov.uk">caseofficers@planninginspectorate.gov.uk</a> by {{ '6' | daysInFuture }}.</p>
-
-  <p class="govuk-body">You do not need to tell us about standard conditions.</p>
+  <p class="govuk-body">
+    These are additional to the standard planning conditions we would expect to see.
+  </p>
 
   {% set standardConditions %}
     <p class="govuk-body">The development hereby permitted shall begin not later than 3 years from the date of this decision.</p>
@@ -24,8 +22,9 @@
 
     <p class="govuk-body">The development hereby permitted shall be carried out in accordance with the approved plans.</p>
   {% endset -%}
+
   {{ govukDetails({
-    summaryHtml: 'Standard conditions',
+    summaryHtml: 'The standard conditions',
     html: standardConditions
   }) }}
 
@@ -36,16 +35,17 @@
       value: data['extra-conditions'],
       rows: '3',
       label: {
-        html: 'What are your extra conditions?'
+        html: 'Tell us about the new conditions'
       }
     }) }}
   {% endset -%}
+
   {{ govukRadios({
     idPrefix: 'extra-conditions-check',
     name: 'extra-conditions-check',
     fieldset: {
       legend: {
-        html: 'Do you want to tell us about any extra conditions?',
+        html: 'Are there any new conditions?',
         classes: 'govuk-fieldset__legend--m'
       }
     },
@@ -53,7 +53,7 @@
       {
         html: 'Yes',
         value: 'Yes',
-        checked: checked('extra-conditions-check','Yes'),
+        checked: checked('extra-conditions','Yes'),
         conditional: {
           html: extraConditions
         }
@@ -61,8 +61,9 @@
       {
         html: 'No',
         value: 'No',
-        checked: checked('statement-of-case','No')
+        checked: checked('extra-conditions','No')
       }
     ]
   }) }}
+
 {% endblock %}
