--- a/app/views/manage/questionnaire/v13/constraints/affected-listed-buildings.html
+++ b/app/views/manage/questionnaire/v13/constraints/affected-listed-buildings.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'You have added an affected listed building' %}
+{% set title = 'Listed building or site has been added to the case' %}
 
 {% set prototypeLinks = [
   {
@@ -18,19 +18,12 @@
   <span class="govuk-caption-l">
     Constraints, designations and other issues
   </span>
-  
+
   <!-- appeal metadata -->
   <section class="govuk-!-margin-bottom-6">
-
-    {% if data['extrabuildingsaffected'] %}
-      <h1 class="govuk-heading-l">
-        You have added 2 affected listed buildings
-      </h1>
-    {% else %}
       <h1 class="govuk-heading-l">
         {{ title }}
       </h1>
-    {% endif %}
 
     {{ govukSummaryList({
       classes: 'appeal-details govuk-!-margin-bottom-0 govuk-!-margin-top-0',
@@ -39,7 +32,7 @@
         {
           key: {
             visuallyHiddenText: 'Listed building ',
-            html: (data['historicenglandsearchnumber'] or '1282050')
+            html: 'Listed building 1'
 
           },
           value: {
@@ -59,7 +52,7 @@
         {
           key: {
             visuallyHiddenText: 'Listed building ',
-            text: (data['historicenglandsearchnumber'] or '1282051')
+            text: 'Listed building 2'
           },
           value: {
             html: 'Grade II listed building'+
@@ -86,7 +79,7 @@
     name: 'affected-listed-buildings',
     fieldset: {
       legend: {
-        html: 'Do you want to add another listed building?',
+        html: 'Add another building or site?',
         classes: 'govuk-fieldset__legend--m',
         isPageHeading: false
       }
