--- a/app/views/manage/questionnaire/v13/constraints/conservation-check.html
+++ b/app/views/manage/questionnaire/v13/constraints/conservation-check.html
@@ -1,13 +1,11 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Is the appeal site in or next to a conservation area?' %}
+{% set title = 'Is the site in, or next to a conservation area?' %}
 
 {% block questions %}
-
   <span class="govuk-caption-l">
     Constraints, designations and other issues
   </span>
-
   {{ govukRadios({
     idPrefix: 'conservation-check',
     name: 'conservation-check',
@@ -20,22 +18,14 @@
     },
     items: [
       {
-        html: 'In a conservation area',
-        value: 'In a conservation area',
-        checked: checked('conservation-check','In a conservation area')
+        html: 'Yes',
+        value: 'Yes',
+        checked: checked('conservation-check','Yes')
       },
       {
-        html: 'Next to a conservation area',
-        value: 'Next to a conservation area',
-        checked: checked('conservation-check','Next to a conservation area')
-      },
-      {
-        divider: 'or'
-      },
-      {
-        html: 'No, it is not in or next to a conservation area',
-        value: 'Not in or next to a conservation area',
-        checked: checked('conservation-check','Not in or next to a conservation area')
+        html: 'No',
+        value: 'No',
+        checked: checked('conservation-check','No')
       }
     ]
   }) }}
