--- a/app/views/manage/questionnaire/v13/constraints/conservation-upload.html
+++ b/app/views/manage/questionnaire/v13/constraints/conservation-upload.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Upload the conservation area map and guidance' %}
+{% set title = 'Upload conservation map and guidance' %}
 
 {% block questions %}
 
@@ -18,7 +18,7 @@
       name: 'conservation-upload',
       classes: 'moj-multi-file-upload__input',
       label: {
-        text: 'Upload a file',
+        text: 'Upload files',
         classes: 'govuk-label--m'
       },
       hint: {
@@ -30,6 +30,7 @@
       text: 'Upload file',
       classes: 'govuk-button--secondary moj-multi-file-upload__button'
     })}}
+    
   {% endset %}
 
   {{ mojMultiFileUpload({
