S78 LPAQ notified content updates

--- a/app/views/manage/questionnaire-has/v5/notified/letters-upload.html
+++ b/app/views/manage/questionnaire-has/v5/notified/letters-upload.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Upload letters and emails that were sent to the neighbours' %}
+{% set title = 'Upload letters or emails sent to interested parties with their addresses' %}
 
 {% block questions %}
   <span class="govuk-caption-l">
@@ -33,7 +33,7 @@
       name: 'letters-upload',
       classes: 'moj-multi-file-upload__input',
       label: {
-        text: 'Upload a file',
+        text: 'Upload files',
         classes: 'govuk-label--m'
       },
       hint: {
