--- a/app/views/manage/questionnaire/v13/notified/notified-how.html
+++ b/app/views/manage/questionnaire/v13/notified/notified-how.html
@@ -28,12 +28,12 @@
         checked: checked('notified-how','A site notice')
       },
       {
-        html: 'Letter/email to interested parties',
+        html: 'Letters or emails to interested parties',
         value: 'Letters to the neighbours',
         checked: checked('notified-how','Letters to the neighbours')
       },
       {
-        html: 'A press advert',
+        html: 'An advert in the local press',
         value: 'A press advert',
         checked: checked('notified-how','A press advert')
       }
