--- a/app/views/manage/questionnaire-has/v5/notified/site-notice-upload.html
+++ b/app/views/manage/questionnaire-has/v5/notified/site-notice-upload.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Upload site notice' %}
+{% set title = 'Upload the site notice' %}
 
 {% block questions %}
   <span class="govuk-caption-l">
