--- a/app/views/manage/questionnaire/v13/notified/press-advert-upload.html
+++ b/app/views/manage/questionnaire/v13/notified/press-advert-upload.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Upload your press advert' %}
+{% set title = 'Upload the press advertisement' %}
 
 {% block questions %}
 
