--- a/app/views/manage/questionnaire/v13/notified/site-notice-upload.html
+++ b/app/views/manage/questionnaire/v13/notified/site-notice-upload.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Upload your site notice' %}
+{% set title = 'Upload the site notice' %}
 
 {% block questions %}
 
