--- a/app/views/manage/questionnaire/v13/task-list__site-access.html
+++ b/app/views/manage/questionnaire/v13/task-list__site-access.html
@@ -22,7 +22,7 @@
     rows: [
       {
         key: {
-          html: 'Inspector access'
+          html: 'Access for inspection'
         },
         value: {
           html: 'Yes<br>'+data['site-entry__details'] if data['site-entry'] == 'Yes' else 'No'
@@ -47,7 +47,7 @@
       },
       {
         key: {
-          html: 'Health and safety issues'
+          html: 'Potential safety risks'
         },
         value: {
           html: 'Yes<br>'+data['health-and-safety__details'] if data['health-and-safety'] == 'Yes' else 'No'
