--- a/app/views/manage/questionnaire/v13/task-list__appeal-process.html
+++ b/app/views/manage/questionnaire/v13/task-list__appeal-process.html
@@ -48,7 +48,7 @@
 
       {
         key: {
-          html: 'Other appeals near the site'
+          html: 'Appeals near the site'
         },
         value: {
           html: data['other-appeals-radio'] or 'No'
