--- a/app/views/manage/questionnaire/v13/task-list__site-access.html
+++ b/app/views/manage/questionnaire/v13/task-list__site-access.html
@@ -47,6 +47,77 @@
       },
       {
         key: {
+          html: 'Inspector visit to neighbour'
+        },
+        value: {
+          html: 'Yes' if data['neighbours-land'] == 'Yes' else 'No'
+        }
+        if data['neighbours-land-complete'] else
+        {
+          html: '<span class="govuk-hint">Not started</span>'
+        },
+        actions: {
+          items: [
+            {
+              href: 'site-access/neighbours-land?cya=true',
+              html: 'Change'
+            }
+            if data['neighbours-land-complete'] else
+            {
+              href: 'site-access/neighbours-land',
+              html: 'Answer'
+            }
+          ]
+        }
+      },
+      {
+        key: {
+          html: 'Neighbour 1'
+        },
+        value: {
+          html: ('172, York Road')+
+                ('<br>'+data['neighbours-address-line-2'] if data['neighbours-address-line-2'])+
+                ('<br>'+(data['neighbours-address-town'] or 'Bristol'))+
+                ('<br>'+(data['neighbours-address-postcode'] or 'BS3 4AL'))
+        } if data['neighbours-address-complete'] else
+        {
+          html: '<span class="govuk-hint">Not started</span>'
+        },
+        actions: {
+          items: [
+            {
+              href: 'site-access/neighbours-address?cya=true',
+              html: 'Change'
+            }
+            if data['neighbours-address-complete'] else
+            {
+              href: 'site-access/neighbours-address',
+              html: 'Answer'
+            }
+          ]
+        }
+      } if data['neighbours-land'] == 'Yes',
+      {
+        key: {
+          html: 'Neighbour 2'
+        },
+        value: {
+          html: ('174, York Road')+
+                ('<br>'+data['neighbours-address-line-2'] if data['neighbours-address-line-2'])+
+                ('<br>'+(data['neighbours-address-town'] or 'Bristol'))+
+                ('<br>'+(data['neighbours-address-postcode'] or 'BS3 4AL'))
+        },
+        actions: {
+          items: [
+            {
+              href: 'site-access/neighbours-address?cya=true',
+              html: 'Change'
+            }
+          ]
+        }
+      } if data['addedneighbours'] == 'yes',
+      {
+        key: {
           html: 'Potential safety risks'
         },
         value: {
