S78 LPAQ content 'Other designations' label change

--- a/app/views/manage/questionnaire/v13/constraints/designated-sites.html
+++ b/app/views/manage/questionnaire/v13/constraints/designated-sites.html
@@ -14,7 +14,7 @@
       name: 'other-desigations',
       value: data['other-desigations'],
       label: {
-        html: 'Other designation(s)'
+        html: 'Other designations'
       }
     }) }}
   {% endset -%}
