Update to the S78 LPAQ index

--- a/app/views/manage/questionnaire/index.html
+++ b/app/views/manage/questionnaire/index.html
@@ -35,6 +35,21 @@
       <li>
         changes to listed building questions to ask for Historic England list entry numbers, returning records from Historic England to check and add
       </li>
+      <li>
+        changes to nearby appeals to make the data more useful
+      </li>
+      <li>
+        additional ‘Is this appeal type approopriate’ question to align this with HAS
+      </li>
+      <li>
+        removed question about site visibility
+      </li>
+      <li>
+        added question about neighbour access
+      </li>
+      <li>
+        content updates
+      </li>
     </ul>
 
     {{ govukButton({
