S78 LPAQ added question for why they wanted to have a different procedure

--- a/app/views/manage/appeals/v5/appeal-details.html
+++ b/app/views/manage/appeals/v5/appeal-details.html
@@ -31,7 +31,7 @@
         </div>
         <div class="govuk-notification-banner__content">
           <p class="govuk-notification-banner__heading">
-            This appeal was due {{ 1 | daysAgo }}
+            This questionnaire was due {{ 1 | daysAgo }}
             <!-- <div class="govuk-warning-text">
               <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
               <strong class="govuk-warning-text__text">
@@ -54,7 +54,7 @@
         </div>
         <div class="govuk-notification-banner__content">
           <p class="govuk-notification-banner__heading">
-            You have until 11:59pm on {{ 3 | daysInFuture }} to:
+            You must submit this questionnaire by 11:59pm on {{ 3 | daysInFuture }}
             <ul class="govuk-list govuk-list--bullet">
               <li>
                 <a href="/manage/questionnaire-has/v6/task-list?action=">Submit questionnaire</a>
