--- a/app/views/manage/questionnaire/v13/appeal-process/procedure.html
+++ b/app/views/manage/questionnaire/v13/appeal-process/procedure.html
@@ -10,9 +10,9 @@
 
   {% set inquiryDays %}
     {{ govukInput({
-      id: 'procedure-lenth',
-      name: 'procedure-lenth',
-      value: data['procedure-lenth'],
+      id: 'procedure-length',
+      name: 'procedure-length',
+      value: data['procedure-length'],
       classes: 'govuk-input--width-3',
       label: {
         html: 'How many days would you expect the inquiry to last?'
