--- a/app/views/manage/questionnaire/v13/task-list__notified.html
+++ b/app/views/manage/questionnaire/v13/task-list__notified.html
@@ -22,7 +22,7 @@
     rows: [
       {
         key: {
-          html: 'Who was notified'
+          html: 'Type of notification'
         },
         value: {
           html: data['notified-how'] | e | replace(',', '<br>') or 'A press advert'
