--- a/app/views/manage/questionnaire/v13/env-impact/env-statement-check.html
+++ b/app/views/manage/questionnaire/v13/env-impact/env-statement-check.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Did you do the environmental statement?' %}
+{% set title = 'Did the applicant do the environmental statement?' %}
 
 {% block questions %}
 
@@ -20,12 +20,12 @@
     },
     items: [
       {
-        html: 'Yes, we did the environmental statement',
+        html: 'Yes',
         value: 'Yes',
         checked: checked('env-statement-check','Yes')
       },
       {
-        html: 'No, we have a negative screening direction',
+        html: 'No, they have a negative screening direction',
         value: 'No',
         checked: checked('env-statement-check','No')
       }
