--- a/app/views/manage/questionnaire/v13/env-impact/env-statement-upload.html
+++ b/app/views/manage/questionnaire/v13/env-impact/env-statement-upload.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Upload your environmental statement and supporting information' %}
+{% set title = 'Upload the environmental statement and supporting information' %}
 
 {% block questions %}
 
