--- a/app/views/_includes/appeal-content/lpa-full-appeal-meta.html
+++ b/app/views/_includes/appeal-content/lpa-full-appeal-meta.html
@@ -32,6 +32,14 @@
   </div>
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
+      Applicant
+    </dt>
+    <dd class="govuk-summary-list__value">
+      Rachel Silver
+    </dd>
+  </div>
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
       Application number
     </dt>
     <dd class="govuk-summary-list__value">
