--- a/app/views/manage/final-comments/index.html
+++ b/app/views/manage/final-comments/index.html
@@ -21,12 +21,12 @@
       {{ title }}
     </h1>
 
-    {% set version = "1" %}
+    {% set version = "2" %}
     <h2 class="govuk-heading-m">
       Version {{version}}
       {{ govukTag({
-        classes: 'govuk-tag--blue govuk-!-margin-left-2',
-        text: 'Researched'
+        classes: 'govuk-tag--green govuk-!-margin-left-2',
+        text: 'Ready for research'
       }) }}
     </h2>
 
@@ -36,12 +36,56 @@
       isStartButton: true
     }) }}
 
-    <p>
+    <!-- <p>
       Researched November 2022<br>
       <a href="https://pins-ds.atlassian.net/wiki/spaces/AAPDS/pages/1066336287" class="govuk-link">
         Confluence user research notes
       </a>
-    </p>
+    </p> -->
+
+    <p class="govuk-!-margin-bottom-2">Changes:</p>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>
+        removing document upload
+      </li>
+    </ul>
+
+    {% set v1HTML %}
+
+      {% set version = "1" %}
+
+      <p>
+        Researched November 2022<br>
+        <a href="https://pins-ds.atlassian.net/wiki/spaces/AAPDS/pages/1066336287" class="govuk-link">
+          Confluence user research notes
+        </a>
+      </p>
+
+      {{ govukButton({
+        html: 'View prototype',
+        href: 'v'+version+'/task-list',
+        isStartButton: true
+      }) }}
+
+    {% endset -%}
+
+
+
+    {{ govukAccordion({
+      id: 'previous',
+      classes: 'govuk-!-margin-top-5',
+      items: [
+
+        {
+          heading: {
+            html: 'Version 1 <strong class="govuk-tag govuk-tag--blue govuk-!-margin-left-2">Researched</strong>'
+          },
+          content: {
+            html: v1HTML
+          }
+        }
+      ]
+    }) }}
 
     {% set lpaForm %}
       <form method="get" action="v{{version}}/add-comments">
